@@ -18,6 +18,7 @@
 - Added parallelCollectionScan method to collection returning CommandCursor instances for cursors
 - Made CommandCursor behave as Readable stream
 - Only Db honors readPreference settings, removed Server.js legacy readPreference settings due to user confusion.
+- Reconnect event emitted by ReplSet/Mongos/Server after reconnect and before replaying of buffered operations.
 
 1.3.19 2013-08-21
 -----------------
